--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -1,12 +1,30 @@
-.item{
-    width: 200px;
-    background-color: white;
-    margin: 10px;
-    border-radius: 10px;
-    cursor: pointer;
+.item {
+	width: 200px;
+	background-color: white;
+	margin: 10px;
+	border-radius: 20px;
+	cursor: pointer;
 }
-.first-item{
-    grid-row-start: span 2;
-    grid-column-end: span 2;
-    width: 410px;
+.first-item {
+	grid-row-start: span 2;
+	grid-column-end: span 2;
+	width: 410px;
+}
+.itemImage {
+	width: 100%;
+	height: 100%;
+	border-radius: 20px;
+	opacity: 1;
+}
+.checkField {
+	margin: 10px;
+	position: absolute;
+	visibility: hidden;
+    z-index: 10;
+}
+.item:hover {
+	filter: brightness(70%);
+}
+.item:hover .checkField {
+	visibility: visible;
 }
