add some shadow on card

--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -4,6 +4,8 @@
 	margin: 10px;
 	border-radius: 20px;
 	cursor: pointer;
+    border:1px solid lightgray;
+    box-shadow: 4px 3px 13px -12px black;
 }
 .first-item {
 	grid-row-start: span 2;
@@ -24,6 +26,7 @@
 }
 .item:hover {
 	filter: brightness(70%);
+    box-shadow: 7px 8px 14px -11px black;
 }
 .item:hover .checkField {
 	visibility: visible;
