--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -7,7 +7,8 @@
     border:1px solid lightgray;
     box-shadow: 4px 3px 13px -12px black;
 }
-.first-item {
+
+.features-item {
 	grid-row-start: span 2;
 	grid-column-end: span 2;
 	width: 410px;
